infra/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: david-eini12-dev
  name: hostile_tweets_identifier
spec:
  selector:
    matchLabels:
      app:  hostile_tweets_identifier
  replicas: 1
  template:
    metadata:
      labels:
        app:  hostile_tweets_identifier
    spec:
      containers:
        - name:  hostile_tweets_identifier
          image: david4554545/hostile-tweets-identifier:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
