infra/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostile-tweets-svc
  namespace: david-eini12-dev
spec:
  selector:
    app: hostile-tweets-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
